--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -35,7 +35,7 @@ header nav {
 
 header nav .nav-logo {
   width: auto;
-  height: 5em;
+  height: 4em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,7 +90,7 @@ header nav ul li:hover {
   cursor: pointer;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 940px) {
   header nav ul.menu-not-active{
     display: none;
   }
